on tablet size - having issues with the navlinks overfilling so had to apply flex-wrap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -199,6 +199,7 @@ main {
     max-width: fit-content; 
    /* min-width: auto; */
     padding: 20px 1rem;
+    margin-bottom: 20px;
 
 }
 
@@ -274,7 +275,7 @@ main {
    /* min-width: auto; */
     padding: 20px 1rem;
     text-align: center;
-    margin-bottom: 50px;
+    margin-bottom: 20px;
 
 }
 
@@ -307,7 +308,7 @@ main {
 
 
 .beer, .wine {
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
     
 .beer, .wine, .soft-drinks {
@@ -328,6 +329,9 @@ main {
     list-style: none;
     margin: 20px;
 }
+
+
+
 
 /* ABOUT */
 #about {
@@ -554,6 +558,7 @@ i {
 
 /* taken from love running */ 
 
+/* for tablet size - 768px */
 @media screen and (min-width: 768px) {
     /* Header */ 
     nav {
@@ -576,12 +581,16 @@ i {
 
     .nav_links {
         display: flex;
-       
+        /* the nav links overfill so had to put flex-wrap: wrap */
+        flex-wrap: wrap;
+        max-width: fit-content;
+        
     }
 
     .nav_links > li {
         padding-left: 1rem;
         margin-bottom: 1em;
+        
     }
 
     .nav-toggle-label {
@@ -593,5 +602,13 @@ i {
         line-height: 75px;
         margin: 0 0.5rem;
     }
+
+    /* hero - love running */ 
+    #cover-text {
+        width: 300px;
+        right: 50px;
+    }
 }
 
+
+/* for desktop size - 1200px */
